--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-obr_host=http://54.251.132.124:8081/nexus/content/repositories/fclocal/
+obr_host=http://54.251.132.124:8081/nexus/content/repositories/brewchain/
 #obr_host=http://17376l7p30.iask.in:28329/nexus/content/repositories/fclocal/
 obr_usr=admin
-obr_pwd=admin123
+obr_pwd=K8w2CEf4
 
 repos_host=http://54.251.132.124:8081/nexus/content/groups/cwv
 #repos_host=http://17376l7p30.iask.in:28329/nexus/content/groups/fc/
