--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'zippo'
 
 
 subprojects {
-	project.group='org.fc.cwv'
+	project.group='org.brewchain.cwv'
 	
 	apply plugin: 'eclipse'
 	apply plugin: 'zippo'
@@ -29,7 +29,7 @@ subprojects {
 	buildscript {
 	
 		dependencies { 
-			classpath "org.brewchain.cwv:org.brewchain.cwv.cwv-game-orm:1.0.1" 
+			classpath "org.brewchain.cwv:org.brewchain.cwv.cwv-game-orm:1.0.3" 
 		 }
 	}
 	
@@ -37,11 +37,11 @@ subprojects {
 	dependencies {
 		compile ("org.fc.zippo:org.fc.zippo.oapi:3.3.0")
 
-		compile ("org.brewchain.cwv:org.brewchain.cwv.cwv-game-orm:1.0.1")
+		compile ("org.brewchain.cwv:org.brewchain.cwv.cwv-game-orm:1.0.3")
 		// compile group: 'commons-net', name: 'commons-net', version: '3.5'
 	}
 
 	version = '1.0.0'
 
-	jar { manifest.attributes provider: 'org.fc.cwv' }
+	jar { manifest.attributes provider: 'org.brewchain.cwv' }
 }
