--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,12 +4,13 @@ dependencies {
  includeInJar 'com.google.code.gson:gson:2.8.0'
 
  includeInJar 'io.jsonwebtoken:jjwt:0.9.0'
+ includeInJar 'com.github.penggle:kaptcha:2.3.2'
 
  //compile 'org.fc.zippo:org.fc.zippo.psm:1.0.3'
 }
 jar {
  manifest{
-  attributes( 'Import-Ignore':'scalaj.http,org.springframework,org.freemarker,freemarker,com.google.gson,io.jsonwebtoken')
+  attributes( 'Import-Ignore':'scalaj.http,org.springframework,org.freemarker,freemarker,com.google.gson,io.jsonwebtoken,com.google.code.kaptcha')
  }
 }
 
